src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  min-height: 100vh;
}

body {
  @apply bg-zinc-900 text-zinc-100 min-h-screen;
  font-family: var(--font-dm-sans), ui-sans-serif, system-ui, sans-serif;
}

table, pre, code, .font-mono {
  font-family: var(--font-fira-code), ui-monospace, monospace;
}

.container {
  @apply mx-auto max-w-6xl px-4;
}

